--- a/src/components/asideNavFiles/asideNav.html
+++ b/src/components/asideNavFiles/asideNav.html
@@ -59,18 +59,16 @@
       </li>
       <li class="nav-item">
         <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#exampleModal">
-          +
+          Add Address
         </button>
         <add-address></add-address>
       </li>
     </ul>
 
-    <!-- Todo render this from the vuex saved addresses -->
-    <!--Todo  Make a collapsable  dropdown -->
     <ul class="nav flex-column mt-1" v-for="address in $store.state.NHAddresses" :key="address.id">
       <!-- if selected addr exist execute this -->
       <!-- :class="{'text-primary': address.name == $store.state.selectedAddr.name }" -->
-      <li class="nav-item">
+      <li class="nav-item" :class="{'text-primary': address.name == $store.state.selectedAddr.name }">
         <span @click="$store.commit('removeNHAddress', address)">-</span>
 
         <span @click="$store.commit('changeSelectedAddr', address)">
