--- a/src/components/workersFiles/workers.html
+++ b/src/components/workersFiles/workers.html
@@ -2,6 +2,8 @@
   <div class="container-fliud" v-if="$store.state.selectedAddr != null">
     <!-- Todo Make a dropdown to filter by algorithim minig -->
     <!-- Todo add options prop -->
+    <h6>{{workersData.addr}}</h6>
+    <h6>You Have {{workersData.workers.length}} Active Workers</h6>
     <div v-if="dataLoaded" style="width: 400px;">
       <do-nut :chartData="userData" :width="100" :height="100"></do-nut>
     </div>
