Removed Addr names - added error page

--- a/src/components/compareFiles/compare.html
+++ b/src/components/compareFiles/compare.html
@@ -34,4 +34,5 @@
     <div class="container-fluid mx-auto" v-else>
         <h1 class="mx-auto">Add an Address</h1>
     </div>
+    <error v-if="error"> </error>
 </div>
