--- a/src/components/paymentsFiles/payments.html
+++ b/src/components/paymentsFiles/payments.html
@@ -34,7 +34,7 @@
       <p>Total Amount: {{totalAmount}}</p>
       <p>Total In Fees: {{totalFees}}</p>
       <!-- Todo make a slider or something to change the value of bitcoin -->
-      <p>Profit: ({{totalAmount}} - {{totalFees}}) X {{$store.state.currentBITPriceSee}} = {{totalProfit}}$ </p> 
+      <p>Profit: ({{totalAmount}} - {{totalFees}}) X {{$store.state.currentBITPriceSee}} = {{totalProfit}}$ </p>
     </div>
 
   </div>
@@ -42,5 +42,6 @@
   <div class="container-fluid mx-auto" v-else>
     <h1 class="mx-auto">Add an Address</h1>
   </div>
+  <error v-if="error"> </error>
 
 </div>
