--- a/src/components/workersFiles/workers.html
+++ b/src/components/workersFiles/workers.html
@@ -43,4 +43,6 @@
   <div class="container-fluid mx-auto" v-else>
     <h1 class="mx-auto">Add an Address</h1>
   </div>
+  <error v-if="error"> </error>
+
 </div>
