--- a/src/components/navbarFiles/navbar.html
+++ b/src/components/navbarFiles/navbar.html
@@ -13,7 +13,55 @@
     </ul>
     <ul class="ml-auto navbar-nav mr-1">
       <li class="nav-item active"><a class="nav-link" href="https://www.coindesk.com/">
-          {{currentBITPrice }}</a></li>
+          {{currentBITPrice }}</a>
+      </li>
+      <!-- Todo: @click make these active link -->
+      <li class="nav-item">
+        <router-link class="nav-link active" to="/dashboard">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+            stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home">
+            <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
+            <polyline points="9 22 9 12 15 12 15 22"></polyline>
+          </svg>
+          Dashboard <span class="sr-only">(current)</span>
+        </router-link>
+      </li>
+      <li class="nav-item">
+        <router-link class="nav-link active" to="/payments">
+          <!-- <a class="nav-link" href="#"> -->
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+            stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-users">
+            <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
+            <circle cx="9" cy="7" r="4"></circle>
+            <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
+            <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
+          </svg>
+          Payments
+          <!-- </a> -->
+        </router-link>
+      </li>
+      <li class="nav-item">
+        <router-link class="nav-link active" to="/workers">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+            stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart-2">
+            <line x1="18" y1="20" x2="18" y2="10"></line>
+            <line x1="12" y1="20" x2="12" y2="4"></line>
+            <line x1="6" y1="20" x2="6" y2="14"></line>
+          </svg>
+          Workers
+        </router-link>
+      </li>
+      <li class="nav-item">
+        <router-link class="nav-link active" to="/compare">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+            stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-layers">
+            <polygon points="12 2 2 7 12 12 22 7 12 2"></polygon>
+            <polyline points="2 17 12 22 22 17"></polyline>
+            <polyline points="2 12 12 17 22 12"></polyline>
+          </svg>
+          Compare
+        </router-link>
+      </li>
     </ul>
     <!-- Todo that thing later -->
     <!-- 
