added donate page - Limit do addrs avaible - footer is changed to addrs -

--- a/src/components/addAddressFiles/addAddress.html
+++ b/src/components/addAddressFiles/addAddress.html
@@ -22,6 +22,9 @@
                         </div>
                     </div>
                 </form>
+                <div v-if="incorrectNHAddr" class="alert alert-danger mt-4" role="alert">
+                    Invalid NH Address
+                </div>
             </div>
 
             <div class="modal-footer">
