--- a/src/components/footerFiles/footer.html
+++ b/src/components/footerFiles/footer.html
@@ -1,9 +1,12 @@
-<footer class="footer bg-dark text-white">
-
-  <!-- Footer Links -->
-  <div class="container pt-5 pb-2">
-    <div class="row">
-    </div>
-    <!-- Footer Links-->
+<footer class="footer bg-dark text-white" aria-label="breadcrumb">
+  <!-- Todo: Put it in the center -->
+  <div class="container bg-dark text-white">
+    <ol class="breadcrumb bg-dark text-white mt-0 mb-0">
+      <li @click="$store.commit('changeSelectedAddr', address)" class="breadcrumb-item" :class="{'text-primary': address.name == $store.state.selectedAddr.name }"
+        v-for="address in $store.state.NHAddresses" :key="address.id">
+        {{address.name}}
+      </li>
+    </ol>
   </div>
+
 </footer>
