--- a/src/components/paymentsFiles/payments.html
+++ b/src/components/paymentsFiles/payments.html
@@ -33,8 +33,8 @@
     <div class="container-fluid" v-if="dataLoaded">
       <p>Total Amount: {{totalAmount}}</p>
       <p>Total In Fees: {{totalFees}}</p>
-      <!-- Todo make a slider or something to change the value of bitcoin -->
-      <p>Profit: ({{totalAmount}} - {{totalFees}}) X {{$store.state.currentBITPriceSee}} = {{totalProfit}}$ </p>
+      <!-- Todo make a slider or something to change the value of bitcoin since {{profitInterval}}-->
+      <p>Profit: ({{totalAmount}} - {{totalFees}}) X {{$store.state.currentBITPriceSee}} = {{totalProfit}}$</p>
     </div>
 
   </div>
