--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,4 +1,3 @@
-@import "~bootstrap/scss/bootstrap";
 .fade-enter-active,
 .fade-leave-active {
   transition-duration: 0.3s;
@@ -10,3 +9,6 @@
 .fade-leave-active {
   opacity: 0
 }
+
+$breadcrumb-divider: quote("|");
+@import "~bootstrap/scss/bootstrap";
