deleted addr4 - addr + button on footer

--- a/src/components/paymentsFiles/payments.html
+++ b/src/components/paymentsFiles/payments.html
@@ -34,7 +34,7 @@
       <p>Total Amount: {{totalAmount}}</p>
       <p>Total In Fees: {{totalFees}}</p>
       <!-- Todo make a slider or something to change the value of bitcoin since {{profitInterval}}-->
-      <p>Profit: ({{totalAmount}} - {{totalFees}}) X {{$store.state.currentBITPriceSee}} = {{totalProfit}}$</p>
+      <p>Profit: {{totalBIT}} X {{$store.state.currentBITPriceSee}} = {{totalProfit}}$</p>
     </div>
 
   </div>
