--- a/src/components/footerFiles/footer.html
+++ b/src/components/footerFiles/footer.html
@@ -1,12 +1,19 @@
 <footer class="footer bg-dark text-white" aria-label="breadcrumb">
+  <add-address></add-address>
   <!-- Todo: Put it in the center -->
   <div class="container bg-dark text-white">
-    <ol class="breadcrumb bg-dark text-white mt-0 mb-0">
+    <ol class="breadcrumb bg-dark text-white mt-0 mb-0 mr-0">
       <li @click="$store.commit('changeSelectedAddr', address)" class="breadcrumb-item" :class="{'text-primary': address.name == $store.state.selectedAddr.name }"
         v-for="address in $store.state.NHAddresses" :key="address.id">
         {{address.name}}
       </li>
+      <li class="breadcrumb-item">
+        <button v-if="$store.state.NHAddresses.length < 6" type="button" class="btn btn-primary btn-sm" data-toggle="modal"
+          data-target="#exampleModal">
+          Add Address
+        </button>
+      </li>
     </ol>
-  </div>
 
+  </div>
 </footer>
