--- a/src/components/asideNavFiles/asideNav.html
+++ b/src/components/asideNavFiles/asideNav.html
@@ -1,70 +1,11 @@
 <nav>
   <div class="sidebar-sticky">
-    <ul class="nav flex-column">
-      <li class="nav-item">
-        <router-link class="nav-link active" to="/dashboard">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-            stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home">
-            <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
-            <polyline points="9 22 9 12 15 12 15 22"></polyline>
-          </svg>
-          Dashboard <span class="sr-only">(current)</span>
-        </router-link>
-      </li>
-      <li class="nav-item">
-        <router-link class="nav-link" to="/payments">
-          <!-- <a class="nav-link" href="#"> -->
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-            stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-users">
-            <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
-            <circle cx="9" cy="7" r="4"></circle>
-            <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
-            <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
-          </svg>
-          Payments
-          <!-- </a> -->
-        </router-link>
-      </li>
-      <li class="nav-item">
-        <router-link class="nav-link" to="/workers">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-            stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart-2">
-            <line x1="18" y1="20" x2="18" y2="10"></line>
-            <line x1="12" y1="20" x2="12" y2="4"></line>
-            <line x1="6" y1="20" x2="6" y2="14"></line>
-          </svg>
-          Workers
-        </router-link>
-      </li>
-      <li class="nav-item">
-        <router-link class="nav-link" to="/compare">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-            stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-layers">
-            <polygon points="12 2 2 7 12 12 22 7 12 2"></polygon>
-            <polyline points="2 17 12 22 22 17"></polyline>
-            <polyline points="2 12 12 17 22 12"></polyline>
-          </svg>
-          Compare
-        </router-link>
-      </li>
-      <li class="nav-item">
-        <router-link class="nav-link" to="/donate">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-            stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file">
-            <path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path>
-            <polyline points="13 2 13 9 20 9"></polyline>
-          </svg>
-          Donate
-        </router-link>
-      </li>
-      <li class="nav-item">
-        <button v-if="$store.state.NHAddresses.length < 6" type="button" class="btn btn-primary btn-sm" data-toggle="modal"
-          data-target="#exampleModal">
-          Add Address
-        </button>
-        <add-address></add-address>
-      </li>
-    </ul>
+    <!-- Could put hash rates of the ones from NH here -->
+    <button v-if="$store.state.NHAddresses.length < 6" type="button" class="btn btn-primary btn-sm" data-toggle="modal"
+      data-target="#exampleModal">
+      Add Address
+    </button>
+    <add-address></add-address>
     <p class="mb-0">{{addrsLeft}} / 6 Addrs Left</p>
     <ul class="nav flex-column mt-1" v-for="address in $store.state.NHAddresses" :key="address.id">
       <li class="nav-item" :class="{'text-primary': address.name == $store.state.selectedAddr.name }">
