--- a/src/components/dashboardFiles/dashboard.html
+++ b/src/components/dashboardFiles/dashboard.html
@@ -1,51 +1,154 @@
 <div class="border-bottom border-left">
   <div class="container-fluid" v-if='$store.state.selectedAddr != null'>
-
-    <h2>Balance</h2>
-    <h3>{{$store.state.selectedAddr.addr}}</h3>
-    <div v-if="dataLoaded">
-      <line-chart :width="400" :height="200" :chartData="userData" class="my-1" :options="chartOptions">
-      </line-chart>
+    <div class="row">
+      <div class="col-12">
+        <div class="card">
+          <div class="card-body">
+            <div class="d-md-flex align-items-center">
+              <div>
+                <h4 class="card-title mb-0">Current Balance</h4>
+                <h5>{{$store.state.selectedAddr.addr}}</h5>
+              </div>
+            </div>
+          </div>
+          <div class="container-fluid">
+            <div v-if="dataLoaded">
+              <line-chart :width="400" :height="200" :chartData="userData" class="my-1" :options="chartOptions">
+              </line-chart>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+    <!-- chart START -->
+    <div class="row">
+      <!-- Chart Starts Here -->
+      <!-- <div class="col-md-8">
+        <div class="card">
+          <div class="card-body">
+            <div class="d-md-flex align-items-center">
+              <div>
+                <h4 class="card-title">Sales Summary</h4>
+                <h5 class="card-subtitle">Overview of Latest Month</h5>
+              </div>
+              <div class="ml-auto d-flex no-block align-items-center">
+                <ul class="list-inline font-12 dl m-r-15 m-b-0">
+                  <li class="list-inline-item text-info"><i class="fa fa-circle"></i> Iphone</li>
+                  <li class="list-inline-item text-primary"><i class="fa fa-circle"></i> Ipad</li>
+                </ul>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-lg-12">
+                <div class="campaign ct-charts"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div> -->
+      <!-- Crypto Prices -->
+      <!-- <div class="col-md-4">
+        <div class="card">
+          <div class="card-body">
+            <h4 class="card-title">Feeds</h4>
+            <div class="feed-widget">
+              <ul class="list-style-none feed-body m-0 p-b-20">
+                <li class="feed-item">
+                  <div class="feed-icon bg-info"><i class="far fa-bell"></i></div> You have 4
+                  pending tasks. <span class="ml-auto font-12 text-muted">Just Now</span>
+                </li>
+                <li class="feed-item">
+                  <div class="feed-icon bg-success"><i class="ti-server"></i></div> Server #1
+                  overloaded.<span class="ml-auto font-12 text-muted">2 Hours ago</span>
+                </li>
+                <li class="feed-item">
+                  <div class="feed-icon bg-warning"><i class="ti-shopping-cart"></i></div>
+                  New order received.<span class="ml-auto font-12 text-muted">31 May</span>
+                </li>
+                <li class="feed-item">
+                  <div class="feed-icon bg-danger"><i class="ti-user"></i></div> New user
+                  registered.<span class="ml-auto font-12 text-muted">30 May</span>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div> -->
+    </div>
+    <!-- chart END-->
+    
+    <div class="row">
+      <div class="col-12">
+        <div class="card">
+          <div class="card-body">
+            <!-- title -->
+            <div class="d-md-flex align-items-center">
+              <div>
+                <h4 class="card-title mb-0">Mined Algorithims</h4>
+              </div>
+              <!-- This is the drop down for later when I can configure time -->
+              <!-- <div class="ml-auto">
+                    <div class="dl">
+                      <select class="custom-select">
+                        <option value="0" selected>Monthly</option>
+                        <option value="1">Daily</option>
+                        <option value="2">Weekly</option>
+                        <option value="3">Yearly</option>
+                      </select>
+                    </div>
+                  </div> -->
+            </div>
+            <!-- title -->
+          </div>
 
-    <div class="table-responsive">
+          <div class="table-responsive">
+            <table class="table table-sm table-hover my-1">
 
-      <table class="table table-sm table-hover my-1">
+              <thead>
+                <tr class="bg-light">
+                  <th class="border-top-0">Algorithim</th>
+                  <th class="border-top-0">Balance</th>
+                  <th class="border-top-0">Speed</th>
+                  <th class="border-top-0">Profitability BTC Day</th>
+                  <th class="border-top-0">Profitability USD Day</th>
+                </tr>
+              </thead>
 
-        <thead>
-          <tr>
-            <th>Algorithim</th>
-            <th>Balance</th>
-            <th>Speed</th>
-            <th>Profitability BTC Day</th>
-            <th>Profitability USD Day</th>
-          </tr>
-        </thead>
+              <tbody v-for="algorithim in profitAlgorithims" :key='algorithim.id'>
+                <tr>
+                  <td>
+                    <div class="d-flex align-items-center">
+                      <div class="">
+                        <h4 class="m-b-0 font-16 ml-1">{{ algorithim.name }}</h4>
+                      </div>
+                    </div>
+                  </td>
 
-        <tbody v-for="algorithim in profitAlgorithims" :key='algorithim.id'>
-          <tr>
-            <td>{{ algorithim.name }}</td>
-
-            <td>{{ algorithim.data[1] }}</td>
+                  <td>{{ algorithim.data[1] }}</td>
 
 
-            <td v-if="algorithim.data[0].a">{{ algorithim.data[0].a }} {{algorithim.suffix}} </td>
-            <td v-else>0</td>
-            <!-- <td>{{ algorithim[1].rs }}</td> -->
-            <td> {{ algorithim.profitability }}</td>
-            <td> {{ (algorithim.profitability * $store.state.currentBITPriceNum).toFixed(2) }} </td>
-          </tr>
-        </tbody>
+                  <td v-if="algorithim.data[0].a">{{ algorithim.data[0].a }} {{algorithim.suffix}} </td>
+                  <td v-else>0</td>
+                  <td> {{ algorithim.profitability }}</td>
+                  <!-- Todo: Make this a computed value -->
+                  <td> {{ (algorithim.profitability * $store.state.currentBITPriceNum).toFixed(2) }} </td>
+                </tr>
+              </tbody>
 
-      </table>
-      <!-- Todo: Put this on the right side so it is aligned with the rest -->
-      <!-- ! Have to keep all text in tag or it will break -->
+            </table>
+          </div>
+
+        </div>
+      </div>
+      <!-- Todo: Make this look better -->
       <p class="container-fluid border">{{totalProfitBIT}} BTC/Day | {{totalProfitDollars}} USD/Day
       </p>
 
     </div>
 
   </div>
+
+
   <div class="container-fluid" v-else>
     <h1>Add an Address</h1>
   </div>
