--- a/src/components/compareFiles/compare.html
+++ b/src/components/compareFiles/compare.html
@@ -1,47 +1,91 @@
-<div class="container">
+<div class="container-fluid">
     <div class="container-fluid" v-if="$store.state.NHAddresses.length != 0">
         <!-- https://startbootstrap.com/template-overviews/sb-admin-2/ -->
-        <h1>Total Unpaid Balance</h1>
         <!-- Todo make a way to add new input fields with reactive data that lets the user enter as many addresses as they want -->
-        <div v-if="dataLoaded">
-            <line-chart :chartData="userData" :width="400" :height="200" class="my-1" :options="chartOptions"></line-chart>
-        </div>
-
-        <div class="container">
-            <div class="row">
-                <div class="col-md-10 my-4 mx-auto">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="table-responsve">
-                                <table class="table table-striped table-hover">
-                                    <thead>
-                                        <tr>
-                                            <th>Address</th>
-                                            <th>Preferred Algorithim</th>
-                                            <th>Unpaid Balance</th>
-                                            <th>Profitability BTC Day</th>
-                                            <th>Profitability USD Day</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr v-for="data in addrsData" :key="data.id">
-                                            <!-- <td v-for="col in columns">{{row[col]}}</td> -->
-                                            <td>{{matchAddrToName(data.result.addr)}}</td>
-                                            <!-- At hover should say how much Profit in BIT -->
-                                            <td>{{prefereredAlgorithim(data.result.current)}}</td>
-                                            <td>{{totalBalance(data)}}</td>
-                                            <td>{{summedProfit(data.result.current, "BIT")}}</td>
-                                            <td>{{summedProfit(data.result.current, "USD")}}</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="d-md-flex align-items-center">
+                            <div>
+                                <h2 class="card-title mb-0">Total Unpaid Balance</h2>
                             </div>
                         </div>
                     </div>
+                    <div v-if="dataLoaded">
+                        <line-chart :chartData="userData" :width="400" :height="200" class="my-1" :options="chartOptions"></line-chart>
+                    </div>
+                    <!-- todo: put it here -->
                 </div>
             </div>
         </div>
-        <hr>
+
+        <div class="row">
+            <div class="col-md-12 my-4">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="d-md-flex align-items-center">
+                            <div>
+                                <h4 class="card-title mb-0">General Data</h4>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="table-responsve">
+                        <table class="table table-striped table-hover">
+                            <thead>
+                                <tr>
+                                    <th>Address</th>
+                                    <th>Preferred Algorithim</th>
+                                    <th>Unpaid Balance</th>
+                                    <th>Profitability BTC Day</th>
+                                    <th>Profitability USD Day</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr v-for="data in addrsData" :key="data.id">
+                                    <!-- <td v-for="col in columns">{{row[col]}}</td> -->
+                                    <td>{{matchAddrToName(data.result.addr)}}</td>
+                                    <!-- At hover should say how much Profit in BIT -->
+                                    <td>{{prefereredAlgorithim(data.result.current)}}</td>
+                                    <td>{{totalBalance(data)}}</td>
+                                    <td>{{summedProfit(data.result.current, "BIT")}}</td>
+                                    <td>{{summedProfit(data.result.current, "USD")}}</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+
+
+
+        </div>
+        <!-- Todo: this will be the workers To indicate if active or not,
+        Todo: Put each one in its own card with multiple of them -->
+        <!-- <div class="card-columns mt-3">
+            <div class="card" v-for="worker in workersData.workers" :key='worker.id'>
+                <div class="card-body">
+                    <h5 class="card-title">{{worker[0]}}</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">Mining {{mapAlgorithim(worker[6])}}</h6>
+                    <div class="row">
+                        <div class="col-6">
+                            <p class="card-text">Accepted: {{worker[1].a}}</p>
+                        </div>
+                        <div class="col-6">
+                            <p class="card-text" v-if="worker[1].rs">Rejected: {{worker[1].rs}}</p>
+                            <p class="card-text" v-else>Rejected: 0</p>
+
+                        </div>
+                    </div>
+
+                </div>
+                <div class="card-footer">
+                    <small class="text-muted">Connected For {{worker[2]}} Minutes</small>
+                </div>
+            </div>
+        </div> -->
+
     </div>
 
     <div class="container-fluid mx-auto" v-else>
