--- a/src/components/dashboardFiles/dashboard.html
+++ b/src/components/dashboardFiles/dashboard.html
@@ -1,6 +1,7 @@
-<div class="border-bottom border-left">
+<div class="border-bottom">
   <div class="container-fluid" v-if='$store.state.selectedAddr != null'>
-    <div class="row">
+    
+    <div class="row mb-3">
       <div class="col-12">
         <div class="card">
           <div class="card-body">
@@ -20,62 +21,6 @@
         </div>
       </div>
     </div>
-    <!-- chart START -->
-    <div class="row">
-      <!-- Chart Starts Here -->
-      <!-- <div class="col-md-8">
-        <div class="card">
-          <div class="card-body">
-            <div class="d-md-flex align-items-center">
-              <div>
-                <h4 class="card-title">Sales Summary</h4>
-                <h5 class="card-subtitle">Overview of Latest Month</h5>
-              </div>
-              <div class="ml-auto d-flex no-block align-items-center">
-                <ul class="list-inline font-12 dl m-r-15 m-b-0">
-                  <li class="list-inline-item text-info"><i class="fa fa-circle"></i> Iphone</li>
-                  <li class="list-inline-item text-primary"><i class="fa fa-circle"></i> Ipad</li>
-                </ul>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-lg-12">
-                <div class="campaign ct-charts"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div> -->
-      <!-- Crypto Prices -->
-      <!-- <div class="col-md-4">
-        <div class="card">
-          <div class="card-body">
-            <h4 class="card-title">Feeds</h4>
-            <div class="feed-widget">
-              <ul class="list-style-none feed-body m-0 p-b-20">
-                <li class="feed-item">
-                  <div class="feed-icon bg-info"><i class="far fa-bell"></i></div> You have 4
-                  pending tasks. <span class="ml-auto font-12 text-muted">Just Now</span>
-                </li>
-                <li class="feed-item">
-                  <div class="feed-icon bg-success"><i class="ti-server"></i></div> Server #1
-                  overloaded.<span class="ml-auto font-12 text-muted">2 Hours ago</span>
-                </li>
-                <li class="feed-item">
-                  <div class="feed-icon bg-warning"><i class="ti-shopping-cart"></i></div>
-                  New order received.<span class="ml-auto font-12 text-muted">31 May</span>
-                </li>
-                <li class="feed-item">
-                  <div class="feed-icon bg-danger"><i class="ti-user"></i></div> New user
-                  registered.<span class="ml-auto font-12 text-muted">30 May</span>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div> -->
-    </div>
-    <!-- chart END-->
 
     <div class="row">
       <div class="col-12">
