Removed stacked on payments

--- a/src/components/paymentsFiles/payments.html
+++ b/src/components/paymentsFiles/payments.html
@@ -46,7 +46,7 @@
         </div>
       </div>
     </div>
-
+    <!-- Todo: Make this a card and make it look like the workers one -->
     <div class="container-fluid" v-if="dataLoaded">
       <p>Total Amount: {{totalAmount}}</p>
       <p>Total In Fees: {{totalFees}}</p>
