commented out contact - make dashboard & wokers & look better

--- a/src/components/donateFiles/donate.html
+++ b/src/components/donateFiles/donate.html
@@ -1,8 +1,6 @@
 <div class="container-fliud">
 
-    <!--Section heading-->
-    <h2 class="h1-responsive font-weight-bold text-center pt-3">Contact Me</h2>
-    <!--Section description-->
+    <!-- <h2 class="h1-responsive font-weight-bold text-center pt-3">Contact Me</h2>
     <p class="text-center w-responsive mx-auto mb-5">Do you have any questions or suggestions? Please do not hesitate
         to contact
         me directly</p>
@@ -42,7 +40,7 @@
 
         </div>
 
-    </div>
+    </div> -->
     <!-- Todo: Make this a card -->
     <div class="container-fliud">
         <h1>My Bitcoin Address:</h1>12WCh85mGoyb5hW9pd6ppkC2szxHLSLYCM
