--- a/src/components/dashboardFiles/dashboard.html
+++ b/src/components/dashboardFiles/dashboard.html
@@ -1,6 +1,6 @@
 <div class="border-bottom">
   <div class="container-fluid" v-if='$store.state.selectedAddr != null'>
-    
+
     <div class="row mb-3">
       <div class="col-12">
         <div class="card">
@@ -23,6 +23,7 @@
     </div>
 
     <div class="row">
+
       <div class="col-12">
         <div class="card">
           <div class="card-body">
@@ -83,10 +84,16 @@
 
         </div>
       </div>
-      <!-- Todo: Make this look better -->
-      <p class="container-fluid border">{{totalProfitBIT}} BTC/Day | {{totalProfitDollars}} USD/Day
-      </p>
 
+      <div class="col-12 mt-3">
+        <div class="card">
+          <div class="card-body">
+              <h5 class="card-title">Total Amount</h5>
+            <p class="card-text text-right">{{totalProfitBIT}} BTC/Day | {{totalProfitDollars}} USD/Day
+          </p>
+          </div>
+        </div>
+      </div>
     </div>
 
   </div>
