made dashboard and payments table look better

--- a/src/components/asideNavFiles/asideNav.html
+++ b/src/components/asideNavFiles/asideNav.html
@@ -1,4 +1,4 @@
-<nav>
+<nav class="bg-light">
   <div class="sidebar-sticky">
     <h5>Addresses</h5>
     <p class="mb-0">{{addrsLeft}} / 6 Addrs Left</p>
