--- a/src/components/paymentsFiles/payments.html
+++ b/src/components/paymentsFiles/payments.html
@@ -1,4 +1,4 @@
-<div class="border-bottom border-left">
+<div class="border-bottom">
 
   <div class="container-fluid" v-if="$store.state.selectedAddr != null">
     <h2>Payments</h2>
@@ -9,20 +9,20 @@
     </div>
 
     <div class="row">
-      <div class="col-12">
+
+      <!-- Table -->
+      <div class="col-md-12 my-4" v-if="dataLoaded">
         <div class="card">
           <div class="card-body">
             <div class="d-md-flex align-items-center">
               <div>
-                <div class="card-title mb-0">
-                  <h4 class="card-title mb-0">Payments</h4>
-                </div>
+                <h4 class="card-title mb-0">Payments</h4>
               </div>
+
             </div>
           </div>
-
-          <div class="table-responsive">
-            <table class="table table-sm table-hover">
+          <div class="table-responsve">
+            <table class="table table-striped table-hover">
               <thead>
                 <tr class="bg-light">
                   <th class="border-top-0">Time</th>
@@ -30,7 +30,6 @@
                   <th class="border-top-0">Fee</th>
                 </tr>
               </thead>
-              <!-- Todo: Move it to the right a bit -->
               <tbody class="">
                 <tr v-for="payment in paymentData" :key='payment.id'>
                   <td class="ml-2">{{$parent.toRelativeTime(payment.time)}}</td>
@@ -42,9 +41,9 @@
               </tbody>
             </table>
           </div>
-
         </div>
       </div>
+      <!-- Calculated Sum -->
       <div class="col-12 mt-3" v-if="dataLoaded">
         <div class="card">
           <div class="card-body">
