--- a/src/components/dashboardFiles/dashboard.html
+++ b/src/components/dashboardFiles/dashboard.html
@@ -1,5 +1,4 @@
 <div class="border-bottom">
-  <!-- Todo: Add button to switch between which range you want -->
   <div class="container-fluid" v-if='$store.state.selectedAddr != null'>
 
     <div class="row mb-3">
@@ -31,8 +30,26 @@
             <div class="d-md-flex align-items-center">
               <div>
                 <h4 class="card-title mb-0">Mined Algorithims</h4>
-              </div>
 
+              </div>
+              <!-- Todo: Add button to switch between which range you want | Make a for loop and an at click method for one of them. Propogate value up and save in store-->
+              <!-- <div class="ml-auto">
+                <div class="dl">
+                  <select class="custom-select">
+                    <option v-for="date in Object.keys(dataRanges)" @click="changeDateRange(date)" :keys="date.id">{{date}}</option>
+                  </select>
+                </div>
+              </div> -->
+              <!-- <div class="dropdown ml-auto">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown"
+                  aria-haspopup="true" aria-expanded="false">
+                  Date Range
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                  <button class="dropdown-item" v-for="date in Object.keys(dataRanges)" @click="changeDateRange(date)"
+                    :keys="date.id" type="button">{{date}}</button>
+                </div>
+              </div> -->
             </div>
           </div>
           <div class="table-responsve">
