interval in payments

--- a/src/components/paymentsFiles/payments.html
+++ b/src/components/paymentsFiles/payments.html
@@ -54,7 +54,7 @@
               <div>Total Amount: {{totalAmount}}</div>
               <div>Total In Fees: {{totalFees}}</div>
               <!-- Todo make a slider or something to change the value of bitcoin since {{profitInterval}}-->
-              <div>Profit: {{totalBIT}} X {{$store.state.currentBITPriceSee}} = {{totalProfit}}$</div>
+              <div>Profit: {{totalBIT}} X {{$store.state.currentBITPriceSee}} = {{totalProfit}}$ in {{profitInterval}}</div>
             </p>
           </div>
         </div>
