--- a/src/components/donateFiles/donate.html
+++ b/src/components/donateFiles/donate.html
@@ -1,51 +1,14 @@
 <div class="container-fliud">
-
-    <!-- <h2 class="h1-responsive font-weight-bold text-center pt-3">Contact Me</h2>
-    <p class="text-center w-responsive mx-auto mb-5">Do you have any questions or suggestions? Please do not hesitate
-        to contact
-        me directly</p>
+    <!-- todo: make a contact form on the right side -->
     <div class="row">
-
-        <div class="col-md-8 mx-auto">
-
-            <form name="contact" method="POST" netlify>
-
-                <div class="row">
-
-                    <div class="col-md-6">
-                        <div class="md-form">
-                            <input type="text" name="email" class="form-control" placeholder="Your Email">
-                        </div>
-                        <br>
-                    </div>
-
-                </div>
-
-                <div class="row">
-
-                    <div class="col-md-12">
-
-                        <div>
-                            <textarea type="text" id="message" name="message" rows="3" class="form-control md-textarea"
-                                placeholder="Your Message"></textarea>
-                            <br>
-                        </div>
-
-                    </div>
-                </div>
-
-                <button class="button btn btn-primary float-right mb-3" type="submit">Send</button>
-
-            </form>
-
+        <div class="col">
+            <h1>My Bitcoin Address:</h1>12WCh85mGoyb5hW9pd6ppkC2szxHLSLYCM
+            <div class="container-fluid">
+                <img src="./blockChainaddress.jpg" class="img-fluid" width="200" height="200" alt="">
+            </div>
         </div>
-
-    </div> -->
-    <!-- Todo: Make this a card -->
-    <div class="container-fliud">
-        <h1>My Bitcoin Address:</h1>12WCh85mGoyb5hW9pd6ppkC2szxHLSLYCM
-        <div class="container-fluid">
-            <img src="./blockChainaddress.jpg" class="img-fluid" width="200" height="200" alt="">
+        <div class="col">
+            <h3>Created by <a href="https://brayanmuniz.com">Brayan Muniz</a></h3>
         </div>
     </div>
 </div>
