--- a/src/components/donateFiles/donate.html
+++ b/src/components/donateFiles/donate.html
@@ -1,4 +1,13 @@
 <div class="container-fliud">
+    <!-- Todo: Make these cards -->
+    <div class="container">
+        <h3>About The Addresses</h3>
+        <div class="row">
+            <div class="col">Addr 1: GTX 1060 6gb and gtx 1060 3gb</div>
+            <div class="col">Addr 2:GTX 1070</div>
+            <div class="col">Addr 3: GTX 1050 TI rarely mines</div>
+        </div>
+    </div>
     <!-- todo: make a contact form on the right side -->
     <div class="row">
         <div class="col">
