--- a/src/components/dashboardFiles/dashboard.html
+++ b/src/components/dashboardFiles/dashboard.html
@@ -22,8 +22,8 @@
       </div>
     </div>
 
+    <!-- Mined Algorithims table -->
     <div class="row">
-      <!-- Mined Algorithims table -->
       <div class="col-md-12 my-4" v-if="dataLoaded">
         <div class="card">
           <div class="card-body">
@@ -90,6 +90,24 @@
 
     </div>
 
+
+    <div class="row">
+      <div class="col-md-12 my-1" v-if='dataLoaded'>
+        <h4>Bitcoin Price</h4>
+        <!-- todo: add a slider that starts from 0 and goes to 25k, start position will be the actual bitcoin price  -->
+        <div>
+          <vue-slider ref="slider" v-bind="sliderOptions" v-model="userChosenBITValue"></vue-slider>
+        </div>
+        <!-- Todo: Make this go to the risght side -->
+        <div class="btn-group">
+          <button class="btn btn-primary" @click="$refs.slider.setValue($store.state.currentBITPriceNum)">Current BIT
+            Value</button>
+          <!-- <button @click="$refs.slider.setIndex(50)">setIndex</button>
+          <button @click="log($refs.slider.getValue())">getValue</button>
+          <button @click="log($refs.slider.getIndex())">getIndex</button> -->
+        </div>
+      </div>
+    </div>
   </div>
 
 
