footer on card in dashboard for total

--- a/src/components/dashboardFiles/dashboard.html
+++ b/src/components/dashboardFiles/dashboard.html
@@ -84,6 +84,9 @@
               </tbody>
             </table>
           </div>
+          <div class="card-footer text-right pr-1">
+            <small class="text-muted">Total: {{summedBIT}} BTC/Day | {{summedBTTToUSD}} USD DAY</small>
+          </div>
         </div>
       </div>
 
