added now in x axis and updated description for addrs

--- a/src/components/donateFiles/donate.html
+++ b/src/components/donateFiles/donate.html
@@ -3,7 +3,7 @@
     <div class="container">
         <h3>About The Addresses</h3>
         <div class="row">
-            <div class="col">Addr 1: GTX 1060 6gb and gtx 1060 3gb</div>
+            <div class="col">Addr 1: 2 GTX 1060 6gb and gtx 1060 3gb</div>
             <div class="col">Addr 2:GTX 1070</div>
             <div class="col">Addr 3: GTX 1050 TI rarely mines</div>
         </div>
