--- a/src/components/compareFiles/compare.html
+++ b/src/components/compareFiles/compare.html
@@ -5,6 +5,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="card">
+                    <!-- Todo: add a dropdown with balance, payments and workers -->
                     <div class="card-body">
                         <div class="d-md-flex align-items-center">
                             <div>
