--- a/src/components/dashboardFiles/dashboard.html
+++ b/src/components/dashboardFiles/dashboard.html
@@ -127,7 +127,8 @@
           <div class="card-body">
             <div class="d-md-flex align-items-center ">
               <!-- <div> -->
-                <h4 class="card-title mb-4">Time To Pay Off Rig Calculator</h4>
+              <h4 class="card-title mb-4">Time To Pay Off Rig Calculator</h4>
+              <input type="checkbox" v-model="inYears" @click="inYears = !inYears"> In Years
               <!-- </div> -->
             </div>
             <div class="d-flex justify-content-around">
